--- a/blog/templates/registration/edit_profile.html
+++ b/blog/templates/registration/edit_profile.html
@@ -19,6 +19,7 @@
                         <p class="bs-component">
                             <center>
                                 <input class="btn btn-success btn-sm" type="submit" value="Edit" />
+                                <a href="javascript:history.go(-1)" class="button btn btn-info" button type="button">Cancel</a>
                             </center>
                         </p>
                         <input type="hidden" name="next" value="{{ next }}" />
