--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -5,91 +5,99 @@
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="{% static 'css/blog.css' %}">
-        <!--link rel="stylesheet"  href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet"-->
+                    <!-- Core CSS - Include with every page -->
+       <link rel="stylesheet"  href="{% static 'css/bootstrap.min.css' %}">
+       <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+        <link rel="stylesheet" href="{%static 'css/Footer.css' %}">
     </head>
     <body>
-        <div class="page-header">
-        {% if user.is_authenticated %}
-            <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
-            <a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
-            <a href="{% url 'profile' %}" class="top-menu"><span class="glyphicon glyphicon-user"></span></a>
-            <p class="top-menu">Hello Welcome {{ user.username }} <small>(<a href="{% url 'logout' %}">Log out</a>)</small></p>
-        {% else %}
-            <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
-        {% endif %}   
-            <h1><a href="/">member site</a></h1>
-            <ul class="nav nav-tabs">
-            <li role="presentation" class="active"><a href="/">Home</a></li>
-            <!---<li role="presentation"><a href="#">services</a></li>-->
-            <!--<li role="presentation"><a href="#">contacts</a></li>-->
-             <!--<div class="dropdown">
-                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true"> member login
-                 <span class="caret"></span>
-                </button>
-                <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">Another action</a></li>
-                    <li><a href="#">Something else here</a></li>
-                    <li><a href="#">Separated link</a></li>
-                </ul>
-               </div>-->
-               <form class="navbar-form navbar-right" role="search">
-                <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Search">
-                </div>
-                <button type="submit" class="btn btn-success">Submit</button>
-                </form> 
-            </ul>
-        </div>
-     
-        <div class="content container">
+         <nav class="navbar navbar-custom">
+                        <!--div class="page-header"-->
+                        <div class="container-fluid">
+                            <div class="navbar-header">
+                                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                                    <span class="sr-only">Toggle navigation</span>
+                                    <span class="icon-bar"></span>
+                                    <span class="icon-bar"></span>
+                                    <span class="icon-bar"></span>
+                                </button>
+                            <a class="navbar-brand" href="/">Member site</a>
+                            </div>
+                             <form class="navbar-form navbar-left">
+                                        <div class="form-group">
+                                          <input type="text" class="form-control" placeholder="Search">
+                                        </div>
+                                        <button type="submit" class="btn btn-default">Submit</button>
+                             </form>
+                {% if user.is_authenticated %}
+                            <div class="nav navbar-nav navbar-center">
+                                <ul class="nav nav-pills" role="tablist">
+                                  <li role="presentation"><a href=class="glyphicon glyphicon-chat>Messages <span class="badge">3</span></a></li>
+                                </ul>
+                            </div>     
+                            <div class="nav navbar-nav navbar-center">Hello Welcome {{ user.username }} </div>                               
+                            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                                <ul class="nav navbar-nav navbar-right">                                    
+                                    <li class="dropdown">
+                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">More Functions
+                                            <span class="caret"></span>
+                                        </a>
+                                        <ul class="dropdown-menu" role="menu">
+                                            <li>
+                                                <a href="{% url 'post_new' %}">Add New Post</a>
+                                            </li>
+                                            <li>
+                                                <a href="{% url 'post_draft_list' %}">Post Draft list</a>
+                                            </li>
+                                            <li>
+                                                <a href="{% url 'profile' %}">Profile Settings</a>
+                                            </li>
+                                            <li class="divider"></li>
+                                            <li>
+                                                <a href="#">Separated link</a>
+                                            </li>
+                                            <li class="divider"></li>
+                                            <li>
+                                                <a href="{% url 'logout' %}">Logout</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                {% else %}
+                        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                                <ul class="nav navbar-nav navbar-right">                                    
+                                    <li class="dropdown">
+                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Login
+                                            <span class="caret"></span>
+                                        </a>
+                                        <ul class="dropdown-menu" role="menu">
+                                            <li>
+                                                <a href="{% url 'login' %}"><span class="glyphicon glyphicon-lock"></span>login Here</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </div>
+                {% endif %}
+                    </nav>
+            <div class="content container">
             <div class="row">
                 <div class="col-md-8">
-                    {% block content %}
-                    {% endblock %}
+                {% block content %}
+                {% endblock %}
+
+                    <!-- Core Scripts - Include with every page -->
+                    <script src = "{% static 'js/jquery.min.js' %}"></script>
+
+                    <script src = "{% static 'js/bootstrap.min.js' %}"></script>
+                    
+                {% block javascript %}
+                {% endblock %}
                 </div>
             </div>
         </div>
 
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                    <ul class="list-inline text-center">
-                        <li>
-                            <a href="#">
-                                <span class="fa-stack fa-lg">
-                                    <i class="fa fa-circle fa-stack-2x"></i>
-                                    <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-                                </span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <span class="fa-stack fa-lg">
-                                    <i class="fa fa-circle fa-stack-2x"></i>
-                                    <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-                                </span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#">
-                                <span class="fa-stack fa-lg">
-                                    <i class="fa fa-circle fa-stack-2x"></i>
-                                    <i class="fa fa-github fa-stack-1x fa-inverse"></i>
-                                </span>
-                            </a>
-                        </li>
-                    </ul>
-                    <p class="copyright text-muted">Copyright &copy; membersite 2017</p>
-                </div>
-            </div>
-        </div>
-    </footer>
-    
-        <!-- Core Scripts - Include with every page -->
-        <!--script src = "{% static 'js/jquery.min.js' %}"></script-->
-        <!--script src = "{% static 'js/bootstrap.min.js' %}"></script-->
     </body>
  </html>
