--- a/blog/templates/blog/post_edit.html
+++ b/blog/templates/blog/post_edit.html
@@ -1,12 +1,24 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
-    <h1>New post</h1>
-    <form method="POST" class="post-form">{% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="save btn btn-Success">Save</button>
-        <a href="javascript:history.go(-1)" button type="button" class="button btn btn-primary">Cancel</a>
-    </form>
+<div class="container">
+    <div class="row">
+        <div class="col-md-4 col-md-offset-4">
+            <div class="Register-panel panel panel-default">
+                <div class="panel-heading">
+                    <h3 class="panel-title">New post</h3>
+                </div>
+                <div class="panel-body">
+                    <form method="POST" class="post-form">{% csrf_token %}
+                       {{ form.as_p }}
+                       <button type="submit" class="save btn btn-Success">Save</button>
+                       <a href="javascript:history.go(-1)" button type="button" class="button btn btn-primary">Cancel</a>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
 {% block javascript %}
 
