--- a/blog/templates/includes/footer.html
+++ b/blog/templates/includes/footer.html
@@ -1,8 +1,10 @@
-{% load i18n %}
-<div class="content">
-</div>
-    <footer id="myFooter">
-        <div class="container">
+
+<!--meta charset="utf-8"-->
+<!--meta name="viewport" content="width=device-width, initial-scale=1"-->
+<div class="container">
+
+    <footer class="footer">
+        <div class="content">
             <div class="row">
                 <div class="col-sm-3 myCols">
                     <h5>Get started</h5>
@@ -37,16 +39,16 @@
                     </ul>
                 </div>
             </div>
-        </div>
+        <div>
         <div class="social-networks">
             <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
             <a href="#" class="facebook"><i class="fa fa-facebook-official"></i></a>
             <a href="#" class="google"><i class="fa fa-google-plus"></i></a>
         </div>
         <div class="footer-copyright">
-            <p>© 2016 Copyright Text </p>
+            <p>© 2017 Copyright Text </p>
         </div>
     </footer>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  
 
+</div>
