--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -5,10 +5,13 @@
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
         <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
+        <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
                     <!-- Core CSS - Include with every page -->
-       <link rel="stylesheet"  href="{% static 'css/bootstrap.min.css' %}">
-       <link rel="stylesheet" href="{% static 'css/blog.css' %}">
-        <link rel="stylesheet" href="{%static 'css/Footer.css' %}">
+        <link rel="stylesheet"  href="{% static 'css/bootstrap.min.css' %}">
+        <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+        <link rel="stylesheet" href="{% static 'css/footer.css' %}"> 
+        <!--link rel="stylesheet" href="{% static 'css/sidebar.css' %}"-->        
     </head>
     <body>
          <nav class="navbar navbar-custom">
@@ -29,12 +32,12 @@
                                         </div>
                                         <button type="submit" class="btn btn-default">Submit</button>
                              </form>
-                {% if user.is_authenticated %}
+                    {% if user.is_authenticated %}
                             <div class="nav navbar-nav navbar-center">
                                 <ul class="nav nav-pills" role="tablist">
                                   <li role="presentation"><a href=class="glyphicon glyphicon-chat>Messages <span class="badge">3</span></a></li>
                                 </ul>
-                            </div>     
+                            </div>                                                                                                  
                             <div class="nav navbar-nav navbar-center">Hello Welcome {{ user.username }} </div>                               
                             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                                 <ul class="nav navbar-nav navbar-right">                                    
@@ -65,6 +68,7 @@
                                 </ul>
                             </div>
                         </div>
+
                 {% else %}
                         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                                 <ul class="nav navbar-nav navbar-right">                                    
@@ -81,7 +85,7 @@
                                 </ul>
                             </div>
                 {% endif %}
-                    </nav>
+        </nav>
             <div class="content container">
             <div class="row">
                 <div class="col-md-8">
@@ -92,12 +96,16 @@
                     <script src = "{% static 'js/jquery.min.js' %}"></script>
 
                     <script src = "{% static 'js/bootstrap.min.js' %}"></script>
+                    <!--other core java script-->
+                    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+                    <!--script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script-->
                     
                 {% block javascript %}
-                {% endblock %}
+                {% endblock %} 
+               
                 </div>
             </div>
-        </div>
-
+        </div>  
+    
     </body>
  </html>
