--- a/blog/templates/includes/footer.html
+++ b/blog/templates/includes/footer.html
@@ -1,7 +1,7 @@
 
 <!--meta charset="utf-8"-->
 <!--meta name="viewport" content="width=device-width, initial-scale=1"-->
-<div class="container">
+<div class="container" id="autowidth">
 
     <footer class="footer">
         <div class="content">
@@ -14,7 +14,7 @@
                         <li><a href="#">Downloads</a></li>
                     </ul>
                 </div>
-                <div class="col-sm-3 myCols">
+                <div class="col-sm-3 myCols" id="autowidth">
                     <h5>About us</h5>
                     <ul>
                         <li><a href="#">Company Information</a></li>
@@ -22,7 +22,7 @@
                         <li><a href="#">Reviews</a></li>
                     </ul>
                 </div>
-                <div class="col-sm-3 myCols">
+                <div class="col-sm-3 myCols" id="autowidth">
                     <h5>Support</h5>
                     <ul>
                         <li><a href="#">FAQ</a></li>
@@ -30,7 +30,7 @@
                         <li><a href="#">Forums</a></li>
                     </ul>
                 </div>
-                <div class="col-sm-3 myCols">
+                <div class="col-sm-3 myCols" id="autowidth">
                     <h5>Legal</h5>
                     <ul>
                         <li><a href="#">Terms of Service</a></li>
@@ -39,7 +39,7 @@
                     </ul>
                 </div>
             </div>
-        <div>
+        </div>
         <div class="social-networks">
             <a href="#" class="twitter"><i class="fa fa-twitter"></i></a>
             <a href="#" class="facebook"><i class="fa fa-facebook-official"></i></a>
@@ -49,6 +49,4 @@
             <p>© 2017 Copyright Text </p>
         </div>
     </footer>
-  
-
 </div>
