--- a/blog/templates/includes/sidebar.html
+++ b/blog/templates/includes/sidebar.html
@@ -8,6 +8,7 @@
           <li><a href="">Create a group</a></li>
           <li><a href="">Join a conversation</a></li>
           <li><a href="">more</a></li>
+          <li><a href="">vedio conference</a></li>
       </ul>
       </div>
       <div class="col-sm-10 ">
