--- a/blog/templates/main/online.html
+++ b/blog/templates/main/online.html
@@ -1,7 +1,5 @@
 {% block content %}
   <div class="container-fluid">
-
-
     <div class="container">
       <div class="sidebar-nav navbar-right">
       {% block sidebar %}
@@ -11,9 +9,9 @@
                           </div>
                           <div class="panel-body">
                                 <p class="bs-component">
-                                  <table border="0" align="right"> 
+                                  <table border="19" align="right"> 
                                       <p>
-                                          <p>content</p>
+                                          <p>{% include "includes/online_log.html" %}</p>
                                       </p>  
                                   </table>
                               </p>
