--- a/blog/static/css/footer.css
+++ b/blog/static/css/footer.css
@@ -4,8 +4,10 @@ footer {
     background-color: #2A1FAA;
     color:white;
     position: relative;
-    width: 100vw;
-    left: calc(-50vw + 50%);
+    width: 100vw;  
+    left: calc(-50vw + 50%); 
+    /*margin: auto; .*/
+    /*width: auto; .*/
 }
 
 footer .footer-copyright{
@@ -32,6 +34,7 @@ footer h5{
     color: white;
     font-weight: bold;
     margin-top: 30px;
+    width: auto;
 }
 
 footer a{
