--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -99,6 +99,9 @@
                     <!--other core java script-->
                     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
                     <!--script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script-->
+                    <!--socket io script-->
+                    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js" type="text/javascript"></script>
+                    <script src="http://localhost:4000/socket.io/socket.io.js"></script>
                     
                 {% block javascript %}
                 {% endblock %} 
